<resources>
    <string name="app_name">App</string>
    <string name="email">Email</string>
    <string name="v_1_0">v 1.0</string>
    <string name="login">Login</string>
    <string name="sistem_informasi_kp_unand">Sistem Informasi KP Unand</string>
    <string name="password">Password</string>
    <string name="email_adress">Email Adress</string>
    <string name="todo">TODO</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Iqbal Manazil Yuni</string>
    <string name="nav_header_subtitle">2011522007</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Thomas</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>